--- a/docs/latex/linked__list_8h.tex
+++ b/docs/latex/linked__list_8h.tex
@@ -8,39 +8,39 @@ struct \mbox{\hyperlink{structroute4tree}{route4tree}}
 \doxysubsection*{Typedefs}
 \begin{DoxyCompactItemize}
 \item 
-typedef int() \mbox{\hyperlink{linked__list_8h_aba031064c2939b045daae6e376bf9534}{callback}}(struct \mbox{\hyperlink{structroute4tree}{route4tree}} $\ast$, void $\ast$)
+typedef void $\ast$($\ast$ \mbox{\hyperlink{linked__list_8h_a009950799adec8c3c6b8e96d13b75340}{callback}}) (struct \mbox{\hyperlink{structroute4tree}{route4tree}} $\ast$, void $\ast$)
 \item 
-typedef int() \mbox{\hyperlink{linked__list_8h_abd85e70fa30638b7c33748ab18bd615a}{callback\+\_\+remove}}(struct \mbox{\hyperlink{structroute4tree}{route4tree}} $\ast$, void $\ast$, void $\ast$)
+typedef void $\ast$($\ast$ \mbox{\hyperlink{linked__list_8h_ac4fc83870d151fef70b30763ee82d050}{callback\+\_\+remove}}) (struct \mbox{\hyperlink{structroute4tree}{route4tree}} $\ast$, void $\ast$, void $\ast$)
 \end{DoxyCompactItemize}
 \doxysubsection*{Functions}
 \begin{DoxyCompactItemize}
 \item 
 struct \mbox{\hyperlink{structroute4tree}{route4tree}} $\ast$ \mbox{\hyperlink{linked__list_8h_a8039c47f44e43b60d48281b765e115dd}{init\+\_\+tree4}} (void)
 \begin{DoxyCompactList}\small\item\em Initialize a binary tree head entry. \end{DoxyCompactList}\item 
-struct \mbox{\hyperlink{structroute4tree}{route4tree}} $\ast$ \mbox{\hyperlink{linked__list_8h_afe6585b2b195138bee10c6d6fd662af3}{insert\+\_\+tree4}} (struct \mbox{\hyperlink{structroute4tree}{route4tree}} $\ast$tree, \+\_\+\+\_\+u32 addr, \+\_\+\+\_\+u8 cidr, void $\ast$\mbox{\hyperlink{structdata}{data}}, \mbox{\hyperlink{linked__list_8h_aba031064c2939b045daae6e376bf9534}{callback}} cb)
+struct \mbox{\hyperlink{structroute4tree}{route4tree}} $\ast$ \mbox{\hyperlink{linked__list_8h_afe6585b2b195138bee10c6d6fd662af3}{insert\+\_\+tree4}} (struct \mbox{\hyperlink{structroute4tree}{route4tree}} $\ast$tree, \+\_\+\+\_\+u32 addr, \+\_\+\+\_\+u8 cidr, void $\ast$\mbox{\hyperlink{structdata}{data}}, \mbox{\hyperlink{linked__list_8h_a009950799adec8c3c6b8e96d13b75340}{callback}} cb)
 \begin{DoxyCompactList}\small\item\em This inserts an entry into a binary tree. \end{DoxyCompactList}\item 
-struct \mbox{\hyperlink{structroute4tree}{route4tree}} $\ast$ \mbox{\hyperlink{linked__list_8h_afbb768f4a8298bf1c98458904170e83c}{lookup\+\_\+lpm}} (struct \mbox{\hyperlink{structroute4tree}{route4tree}} $\ast$tree, \+\_\+\+\_\+u32 addr, \+\_\+\+\_\+u8 cidr)
+void $\ast$ \mbox{\hyperlink{linked__list_8h_ac25fde7383ee19246c5d4d32a787261b}{lookup\+\_\+lpm}} (struct \mbox{\hyperlink{structroute4tree}{route4tree}} $\ast$tree, \+\_\+\+\_\+u32 addr, \+\_\+\+\_\+u8 cidr, void $\ast$\mbox{\hyperlink{structdata}{data}}, \mbox{\hyperlink{linked__list_8h_a009950799adec8c3c6b8e96d13b75340}{callback}} cb)
 \begin{DoxyCompactList}\small\item\em This does a longest prefix match against the binary tree. \end{DoxyCompactList}\item 
-struct \mbox{\hyperlink{structroute4tree}{route4tree}} $\ast$ \mbox{\hyperlink{linked__list_8h_abdc2d663510c6c5d559aeaab82eda7bd}{lookup\+\_\+exact}} (struct \mbox{\hyperlink{structroute4tree}{route4tree}} $\ast$tree, \+\_\+\+\_\+u32 addr, \+\_\+\+\_\+u8 cidr)
+void $\ast$ \mbox{\hyperlink{linked__list_8h_ae7cfa01f7811ee67436884bd94548a21}{lookup\+\_\+exact}} (struct \mbox{\hyperlink{structroute4tree}{route4tree}} $\ast$tree, \+\_\+\+\_\+u32 addr, \+\_\+\+\_\+u8 cidr, void $\ast$\mbox{\hyperlink{structdata}{data}}, \mbox{\hyperlink{linked__list_8h_a009950799adec8c3c6b8e96d13b75340}{callback}} cb)
 \begin{DoxyCompactList}\small\item\em This does an exact match lookup against the tree. \end{DoxyCompactList}\item 
-void \mbox{\hyperlink{linked__list_8h_a21c5fa86cae714013d79e739c14575c2}{remove\+\_\+node}} (struct \mbox{\hyperlink{structroute4tree}{route4tree}} $\ast$tree, \+\_\+\+\_\+u32 address, \+\_\+\+\_\+u8 cidr, void $\ast$\mbox{\hyperlink{structdata}{data}}, \mbox{\hyperlink{linked__list_8h_abd85e70fa30638b7c33748ab18bd615a}{callback\+\_\+remove}} cb)
+void \mbox{\hyperlink{linked__list_8h_a21c5fa86cae714013d79e739c14575c2}{remove\+\_\+node}} (struct \mbox{\hyperlink{structroute4tree}{route4tree}} $\ast$tree, \+\_\+\+\_\+u32 address, \+\_\+\+\_\+u8 cidr, void $\ast$\mbox{\hyperlink{structdata}{data}}, \mbox{\hyperlink{linked__list_8h_ac4fc83870d151fef70b30763ee82d050}{callback\+\_\+remove}} cb)
 \begin{DoxyCompactList}\small\item\em This function removes a node from the tree. \end{DoxyCompactList}\item 
 void \mbox{\hyperlink{linked__list_8h_ac7cb413164f2ed7b1c62f1840f1eae04}{free\+\_\+tree4}} (struct \mbox{\hyperlink{structroute4tree}{route4tree}} $\ast$$\ast$tree)
 \begin{DoxyCompactList}\small\item\em Frees an entire 32-\/bit binary tree using post-\/order traversal. \end{DoxyCompactList}\end{DoxyCompactItemize}
 
 
 \doxysubsection{Typedef Documentation}
-\mbox{\Hypertarget{linked__list_8h_aba031064c2939b045daae6e376bf9534}\label{linked__list_8h_aba031064c2939b045daae6e376bf9534}} 
+\mbox{\Hypertarget{linked__list_8h_a009950799adec8c3c6b8e96d13b75340}\label{linked__list_8h_a009950799adec8c3c6b8e96d13b75340}} 
 \index{linked\_list.h@{linked\_list.h}!callback@{callback}}
 \index{callback@{callback}!linked\_list.h@{linked\_list.h}}
 \doxysubsubsection{\texorpdfstring{callback}{callback}}
-{\footnotesize\ttfamily typedef int() callback(struct \mbox{\hyperlink{structroute4tree}{route4tree}} $\ast$, void $\ast$)}
+{\footnotesize\ttfamily typedef void$\ast$($\ast$ callback) (struct \mbox{\hyperlink{structroute4tree}{route4tree}} $\ast$, void $\ast$)}
 
-\mbox{\Hypertarget{linked__list_8h_abd85e70fa30638b7c33748ab18bd615a}\label{linked__list_8h_abd85e70fa30638b7c33748ab18bd615a}} 
+\mbox{\Hypertarget{linked__list_8h_ac4fc83870d151fef70b30763ee82d050}\label{linked__list_8h_ac4fc83870d151fef70b30763ee82d050}} 
 \index{linked\_list.h@{linked\_list.h}!callback\_remove@{callback\_remove}}
 \index{callback\_remove@{callback\_remove}!linked\_list.h@{linked\_list.h}}
 \doxysubsubsection{\texorpdfstring{callback\_remove}{callback\_remove}}
-{\footnotesize\ttfamily typedef int() callback\+\_\+remove(struct \mbox{\hyperlink{structroute4tree}{route4tree}} $\ast$, void $\ast$, void $\ast$)}
+{\footnotesize\ttfamily typedef void$\ast$($\ast$ callback\+\_\+remove) (struct \mbox{\hyperlink{structroute4tree}{route4tree}} $\ast$, void $\ast$, void $\ast$)}
 
 
 
@@ -88,7 +88,7 @@ A pointer to the head of a binary tree
 \index{linked\_list.h@{linked\_list.h}!insert\_tree4@{insert\_tree4}}
 \index{insert\_tree4@{insert\_tree4}!linked\_list.h@{linked\_list.h}}
 \doxysubsubsection{\texorpdfstring{insert\_tree4()}{insert\_tree4()}}
-{\footnotesize\ttfamily struct \mbox{\hyperlink{structroute4tree}{route4tree}}$\ast$ insert\+\_\+tree4 (\begin{DoxyParamCaption}\item[{struct \mbox{\hyperlink{structroute4tree}{route4tree}} $\ast$}]{tree,  }\item[{\+\_\+\+\_\+u32}]{addr,  }\item[{\+\_\+\+\_\+u8}]{cidr,  }\item[{void $\ast$}]{data,  }\item[{\mbox{\hyperlink{linked__list_8h_aba031064c2939b045daae6e376bf9534}{callback}}}]{cb }\end{DoxyParamCaption})}
+{\footnotesize\ttfamily struct \mbox{\hyperlink{structroute4tree}{route4tree}}$\ast$ insert\+\_\+tree4 (\begin{DoxyParamCaption}\item[{struct \mbox{\hyperlink{structroute4tree}{route4tree}} $\ast$}]{tree,  }\item[{\+\_\+\+\_\+u32}]{addr,  }\item[{\+\_\+\+\_\+u8}]{cidr,  }\item[{void $\ast$}]{data,  }\item[{\mbox{\hyperlink{linked__list_8h_a009950799adec8c3c6b8e96d13b75340}{callback}}}]{cb }\end{DoxyParamCaption})}
 
 
 
@@ -110,11 +110,11 @@ Data is a void pointer making this generic and able to store any data in the tre
 \begin{DoxyReturn}{Returns}
 A \mbox{\hyperlink{structroute4tree}{route4tree}} structure at the inserted position in the tree 
 \end{DoxyReturn}
-\mbox{\Hypertarget{linked__list_8h_abdc2d663510c6c5d559aeaab82eda7bd}\label{linked__list_8h_abdc2d663510c6c5d559aeaab82eda7bd}} 
+\mbox{\Hypertarget{linked__list_8h_ae7cfa01f7811ee67436884bd94548a21}\label{linked__list_8h_ae7cfa01f7811ee67436884bd94548a21}} 
 \index{linked\_list.h@{linked\_list.h}!lookup\_exact@{lookup\_exact}}
 \index{lookup\_exact@{lookup\_exact}!linked\_list.h@{linked\_list.h}}
 \doxysubsubsection{\texorpdfstring{lookup\_exact()}{lookup\_exact()}}
-{\footnotesize\ttfamily struct \mbox{\hyperlink{structroute4tree}{route4tree}}$\ast$ lookup\+\_\+exact (\begin{DoxyParamCaption}\item[{struct \mbox{\hyperlink{structroute4tree}{route4tree}} $\ast$}]{tree,  }\item[{\+\_\+\+\_\+u32}]{addr,  }\item[{\+\_\+\+\_\+u8}]{cidr }\end{DoxyParamCaption})}
+{\footnotesize\ttfamily void$\ast$ lookup\+\_\+exact (\begin{DoxyParamCaption}\item[{struct \mbox{\hyperlink{structroute4tree}{route4tree}} $\ast$}]{tree,  }\item[{\+\_\+\+\_\+u32}]{addr,  }\item[{\+\_\+\+\_\+u8}]{cidr,  }\item[{void $\ast$}]{data,  }\item[{\mbox{\hyperlink{linked__list_8h_a009950799adec8c3c6b8e96d13b75340}{callback}}}]{cb }\end{DoxyParamCaption})}
 
 
 
@@ -132,11 +132,11 @@ This function will return the tree structure at the exact match point if it can 
 \begin{DoxyReturn}{Returns}
 A pointer to the tree entry if matched, or NULL 
 \end{DoxyReturn}
-\mbox{\Hypertarget{linked__list_8h_afbb768f4a8298bf1c98458904170e83c}\label{linked__list_8h_afbb768f4a8298bf1c98458904170e83c}} 
+\mbox{\Hypertarget{linked__list_8h_ac25fde7383ee19246c5d4d32a787261b}\label{linked__list_8h_ac25fde7383ee19246c5d4d32a787261b}} 
 \index{linked\_list.h@{linked\_list.h}!lookup\_lpm@{lookup\_lpm}}
 \index{lookup\_lpm@{lookup\_lpm}!linked\_list.h@{linked\_list.h}}
 \doxysubsubsection{\texorpdfstring{lookup\_lpm()}{lookup\_lpm()}}
-{\footnotesize\ttfamily struct \mbox{\hyperlink{structroute4tree}{route4tree}}$\ast$ lookup\+\_\+lpm (\begin{DoxyParamCaption}\item[{struct \mbox{\hyperlink{structroute4tree}{route4tree}} $\ast$}]{tree,  }\item[{\+\_\+\+\_\+u32}]{addr,  }\item[{\+\_\+\+\_\+u8}]{cidr }\end{DoxyParamCaption})}
+{\footnotesize\ttfamily void$\ast$ lookup\+\_\+lpm (\begin{DoxyParamCaption}\item[{struct \mbox{\hyperlink{structroute4tree}{route4tree}} $\ast$}]{tree,  }\item[{\+\_\+\+\_\+u32}]{addr,  }\item[{\+\_\+\+\_\+u8}]{cidr,  }\item[{void $\ast$}]{data,  }\item[{\mbox{\hyperlink{linked__list_8h_a009950799adec8c3c6b8e96d13b75340}{callback}}}]{cb }\end{DoxyParamCaption})}
 
 
 
@@ -150,15 +150,19 @@ This function will return at the deepest point in the tree that is matched and h
 \hline
 \mbox{\texttt{ in}}  & {\em cidr} & The maximum number of bits to transverse to in the tree \\
 \hline
+\mbox{\texttt{ in}}  & {\em data} & If set, and if callback is set, this is passed to the callback along with the node \\
+\hline
+\mbox{\texttt{ in}}  & {\em cb} & If set, and if data is set, this is called for more granular data matching \\
+\hline
 \end{DoxyParams}
 \begin{DoxyReturn}{Returns}
-A tree entry at the deepest point possible in the transversal 
+A tree entry at the deepest point possible in the transversal or if using callback the callback result is returned 
 \end{DoxyReturn}
 \mbox{\Hypertarget{linked__list_8h_a21c5fa86cae714013d79e739c14575c2}\label{linked__list_8h_a21c5fa86cae714013d79e739c14575c2}} 
 \index{linked\_list.h@{linked\_list.h}!remove\_node@{remove\_node}}
 \index{remove\_node@{remove\_node}!linked\_list.h@{linked\_list.h}}
 \doxysubsubsection{\texorpdfstring{remove\_node()}{remove\_node()}}
-{\footnotesize\ttfamily void remove\+\_\+node (\begin{DoxyParamCaption}\item[{struct \mbox{\hyperlink{structroute4tree}{route4tree}} $\ast$}]{tree,  }\item[{\+\_\+\+\_\+u32}]{address,  }\item[{\+\_\+\+\_\+u8}]{cidr,  }\item[{void $\ast$}]{data,  }\item[{\mbox{\hyperlink{linked__list_8h_abd85e70fa30638b7c33748ab18bd615a}{callback\+\_\+remove}}}]{cb }\end{DoxyParamCaption})}
+{\footnotesize\ttfamily void remove\+\_\+node (\begin{DoxyParamCaption}\item[{struct \mbox{\hyperlink{structroute4tree}{route4tree}} $\ast$}]{tree,  }\item[{\+\_\+\+\_\+u32}]{address,  }\item[{\+\_\+\+\_\+u8}]{cidr,  }\item[{void $\ast$}]{data,  }\item[{\mbox{\hyperlink{linked__list_8h_ac4fc83870d151fef70b30763ee82d050}{callback\+\_\+remove}}}]{cb }\end{DoxyParamCaption})}
 
 
 
