Added some comments to the test_linked_list.c file for doxygen

--- a/docs/latex/test__linked__list_8c.tex
+++ b/docs/latex/test__linked__list_8c.tex
@@ -4,12 +4,12 @@
 \begin{DoxyCompactItemize}
 \item 
 struct \mbox{\hyperlink{structdata}{data}}
-\end{DoxyCompactItemize}
+\begin{DoxyCompactList}\small\item\em Basic structure used to add test data to the tree. \end{DoxyCompactList}\end{DoxyCompactItemize}
 \doxysubsection*{Functions}
 \begin{DoxyCompactItemize}
 \item 
 int \mbox{\hyperlink{test__linked__list_8c_a840291bc02cba5474a4cb46a9b9566fe}{main}} (void)
-\end{DoxyCompactItemize}
+\begin{DoxyCompactList}\small\item\em This code exists purely to test the functionality of the linked list code. \end{DoxyCompactList}\end{DoxyCompactItemize}
 
 
 \doxysubsection{Function Documentation}
@@ -18,6 +18,10 @@ int \mbox{\hyperlink{test__linked__list_8c_a840291bc02cba5474a4cb46a9b9566fe}{ma
 \index{main@{main}!test\_linked\_list.c@{test\_linked\_list.c}}
 \doxysubsubsection{\texorpdfstring{main()}{main()}}
 {\footnotesize\ttfamily int main (\begin{DoxyParamCaption}\item[{void}]{ }\end{DoxyParamCaption})}
+
+
+
+This code exists purely to test the functionality of the linked list code. 
 
 Here is the call graph for this function\+:
 \nopagebreak
