--- a/docs/latex/structdata.tex
+++ b/docs/latex/structdata.tex
@@ -1,5 +1,10 @@
 \hypertarget{structdata}{}\doxysection{data Struct Reference}
 \label{structdata}\index{data@{data}}
+
+
+Basic structure used to add test data to the tree.  
+
+
 \doxysubsection*{Data Fields}
 \begin{DoxyCompactItemize}
 \item 
@@ -9,6 +14,9 @@
 \end{DoxyCompactItemize}
 
 
+\doxysubsection{Detailed Description}
+Basic structure used to add test data to the tree. 
+
 \doxysubsection{Field Documentation}
 \mbox{\Hypertarget{structdata_a8fef22a0018fe0514aa64a3c27ea3681}\label{structdata_a8fef22a0018fe0514aa64a3c27ea3681}} 
 \index{data@{data}!cidr@{cidr}}
@@ -16,13 +24,13 @@
 \doxysubsubsection{\texorpdfstring{cidr}{cidr}}
 {\footnotesize\ttfamily \+\_\+\+\_\+u8 data\+::cidr}
 
-\mbox{\Hypertarget{structdata_aed667f18dfafdd59377fbf24712ec5ae}\label{structdata_aed667f18dfafdd59377fbf24712ec5ae}} 
+CIDR of the added prefix \mbox{\Hypertarget{structdata_aed667f18dfafdd59377fbf24712ec5ae}\label{structdata_aed667f18dfafdd59377fbf24712ec5ae}} 
 \index{data@{data}!prefix@{prefix}}
 \index{prefix@{prefix}!data@{data}}
 \doxysubsubsection{\texorpdfstring{prefix}{prefix}}
 {\footnotesize\ttfamily \+\_\+\+\_\+u32 data\+::prefix}
 
-
+Prefix we are adding to the tree 
 
 The documentation for this struct was generated from the following file\+:\begin{DoxyCompactItemize}
 \item 
